// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton renders correctly 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-tcu9w6-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #521094;
  border: 1px solid #521094;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-tcu9w6-StyledButton:hover {
  background: #e6daff;
}

.cache-tcu9w6-StyledButtonactive,
.cache-tcu9w6-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r0:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-tcu9w6-StyledButton e1qa6uyd0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment large 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-7jrav1-StyledButton {
  width: 48px;
  height: 48px;
  background: transparent;
  color: #521094;
  border: 1px solid #521094;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-7jrav1-StyledButton:hover {
  background: #e6daff;
}

.cache-7jrav1-StyledButtonactive,
.cache-7jrav1-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r2:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-7jrav1-StyledButton e1qa6uyd0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-id630e-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #464959;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-id630e-StyledButton:hover {
  background: #f3f3f4;
}

.cache-id630e-StyledButtonactive,
.cache-id630e-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r4:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-id630e-StyledButton e1qa6uyd0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-tcu9w6-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #521094;
  border: 1px solid #521094;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-tcu9w6-StyledButton:hover {
  background: #e6daff;
}

.cache-tcu9w6-StyledButtonactive,
.cache-tcu9w6-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r3:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-tcu9w6-StyledButton e1qa6uyd0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment small 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-tcu9w6-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #521094;
  border: 1px solid #521094;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-tcu9w6-StyledButton:hover {
  background: #e6daff;
}

.cache-tcu9w6-StyledButtonactive,
.cache-tcu9w6-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r1:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-tcu9w6-StyledButton e1qa6uyd0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom class name 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-tcu9w6-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #521094;
  border: 1px solid #521094;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-tcu9w6-StyledButton:hover {
  background: #e6daff;
}

.cache-tcu9w6-StyledButtonactive,
.cache-tcu9w6-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r8:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="custom-class cache-tcu9w6-StyledButton e1qa6uyd0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copied text 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-tcu9w6-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #521094;
  border: 1px solid #521094;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-tcu9w6-StyledButton:hover {
  background: #e6daff;
}

.cache-tcu9w6-StyledButtonactive,
.cache-tcu9w6-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r7:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-tcu9w6-StyledButton e1qa6uyd0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copy text 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-tcu9w6-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #521094;
  border: 1px solid #521094;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-tcu9w6-StyledButton:hover {
  background: #e6daff;
}

.cache-tcu9w6-StyledButtonactive,
.cache-tcu9w6-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r6:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-tcu9w6-StyledButton e1qa6uyd0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with no border 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-1unlrwr-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #521094;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1unlrwr-StyledButton:hover {
  background: #e6daff;
}

.cache-1unlrwr-StyledButtonactive,
.cache-1unlrwr-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r5:"
    class="cache-yb56yg-StyledChildrenContainer e1h4zly10"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="cache-1unlrwr-StyledButton e1qa6uyd0"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
